--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "clean":"rimraf dist/*"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "nuxt": "^1.4.0"
   },
   "devDependencies": {
@@ -20,6 +22,13 @@
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "image-webpack-loader": "^4.2.0",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
+    "node-sass": "^4.9.0",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^7.0.1",
+    "webpack-spritesmith": "^0.4.1"
   }
 }
